# app.py
@@ -1,8 +1,8 @@
 from flask import render_template
 import connexion
 from db import init_db
-from models import Step, Event
-import views
+from models import Event, RawEvent, RawGroup, RawRecord
+#import views
 
 from db import SessionLocal
 
@@ -19,28 +19,49 @@ def home():
     #steps = session.query(Step).all()
     return render_template("home.html")
 
-# get steps
-@app.route("/steps")
-def steps():
+# get raw events,
+@app.route("/raw_events")
+def raw_events():
     session = SessionLocal()
-    steps = session.query(Step).all()
-    return render_template("steps.html", steps=steps)
+    rawevents = session.query(RawEvent).all()
+    return render_template("raw_events.html", rawevents=rawevents)
+
+# get raw groups, 
+@app.route("/raw_groups")
+def raw_groups():
+    session = SessionLocal()
+    rawgroups = session.query(RawGroup).all()
+    return render_template("raw_groups.html", rawgroups=rawgroups)
+
+# get raw groups, 
+@app.route("/raw_records")
+def raw_records():
+    session = SessionLocal()
+    rawrecords = session.query(RawRecord).all()
+    return render_template("raw_records.html", rawrecords=rawrecords)
+
+# get steps
+#@app.route("/steps")
+#def steps():
+#    session = SessionLocal()
+#    steps = session.query(Step).all()
+#    return render_template("steps.html", steps=steps)
 
 # get events in step
-@app.route("/steps/<step>/events",methods=['GET'])
-def events_in_step(step):
-    session = SessionLocal()
-    print('step',step)
-    sid = views.get_step_id_by_name(session, step)
-    events = session.query(Event).filter(Event.step_id == sid).all()
-    #steps = session.query(Event).filter(event.).all()
-    return render_template("events_in_step.html", step=step, events=events)
+#@app.route("/steps/<step>/events",methods=['GET'])
+#def events_in_step(step):
+#    session = SessionLocal()
+#    print('step',step)
+#    sid = views.get_step_id_by_name(session, step)
+#    events = session.query(Event).filter(Event.step_id == sid).all()
+#    #steps = session.query(Event).filter(event.).all()
+#    return render_template("events_in_step.html", step=step, events=events)
 
 # get events in step
 @app.route("/events",methods=['GET'])
 def events():
     session = SessionLocal()
-    steps = session.query(Step).all()
+    #steps = session.query(Step).all()
     events = session.query(Event).all()
     eventsNames = [e.name for e in events]
     eventsNames = list(dict.fromkeys(eventsNames))
